# my-stuff

./: README.md  index.html  install_scripts  install_stuff  install_stuff.sh  vscode_settings.json
asm/: Makefile  calc.asm  hello.asm
c/: 1.c  CMakeLists.txt  Makefile  calc.c  unix_time.c
c++/: calc.cpp  tic_tac_toe.cpp
cpp/: CMakeLists.txt  Makefile  calc.cpp  english_alphabet.cpp  git_puller.cpp  hello.cpp  unix_time.cpp
d/: calc.d  data_types.d  first.d
go/: Makefile  calc.go
html/: audio_player.html  bmi.html  calendar.html  case.html  check_keyboard_layout.html  check_keyboard_layout.js  date_diff.html  detective.html  diacritics.html  editor.html  editor_editorjs.html  editor_quill.html  facebook_links.html  github_compare.html  homoglyph_checker.html  image_galleries.html  imdb_links.html  ip.html  linux_yandex_mirror.html  markdown_editor.html  matrix.html  monaco.html  msl.html  mtdr.html  mtw.html  notepad.html  num_systems.html  pycode.html  random.html  roman_nums.html  sort_lines.html  system_info.html  time.html  tncd.html  uri_decoder.html  video_player.html  vkvideo_player.html  windows_update_info.html  youtube_link.html
java/: Calc.java  CurrentDate.java  Makefile  RandomInteger.java
java-script/: imdb_contributions_count.js  imdb_list_ids.js  imdb_list_runtime.js  imdb_names_list_sort.js  jekyll_blog_iv_link.js  top_github_stars.js  tracklist.js  tracklist2csv.js
js/: aur_top.js  chrome_bookmarks_http_url.js  google_play_top_apps.js  imdb_list_ids.js  imdb_list_runtime.js  imdb_names_list_sort.js  imdb_seen.js  imdb_top.js  lib.js  (+8 more)
(+134 files in other folders)
